fix invisible arrow click bug

--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@ body {
     width: 1em;
     width: 3em;
     color: grey;
-    z-index: 2;
+    /*z-index: 2;*/
     transition: .25s ease-out;
 }
 
@@ -312,13 +312,6 @@ div.noSelect~.blueBox {
 .select span {
     width: auto;
     background: blue;
-}
-
-
-
-.noClick {
-    pointer-events: none;
-    border: red solid 1px;
 }
 
 /*https://www.toptal.com/designers/ui/neumorphic-ui-design*/
